# CG_COURSE

./: .gitignore  readme.md
docs/: UML.mdj
docs/drafts/Perlin/: gang_perlin.py  generators.py  more_hills.py  perlin.py
docs/drafts/Projection/: gost.tex  main.aux  main.tex
docs/report/: .$CG_UML.drawio.bkp  CG_UML.drawio  LR.drawio  gost.tex  report.aux  report.bbl  report.blg  report.out  report.tex  report.toc  source.bib  title.tex
source/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  build.sh  frun.sh  main.cpp  mainWindow.ui  run.sh
source/Camera/: Camera.cpp  Camera.h
source/Components/: BaseComponent.cpp  BaseComponent.h
source/Components/Concrete/: Line.cpp  Line.h  Polygon.cpp  Polygon.h
source/DrawAdapter/: BaseDrawAdapter.h
source/DrawAdapter/Concrete/: CarcasDrawAdapter.cpp  CarcasDrawAdapter.h  PolygonDrawAdapter.cpp  PolygonDrawAdapter.h
source/Drawer/: QtDrawer.cpp  QtDrawer.h
source/Generators/: DiamondSquareMountainGenerator.cpp  DiamondSquareMountainGenerator.h  MountainGenerator.h
source/Light/: Light.h
source/Manager/: Manager.cpp  Manager.h
source/Objects/: BaseObject.cpp  BaseObject.h
source/Objects/Concrete/: CarcasObject.cpp  CarcasObject.h  PolygonObject.cpp  PolygonObject.h
source/Reader/: BaseReader.cpp  BaseReader.h
source/Reader/Concrete/: ObjReader.cpp  ObjReader.h
source/Scene/: Scene.cpp  Scene.h
source/Texture/: BaseTexture.cpp  BaseTexture.h  Opener.h
source/Texture/Concrete/: JungleTexture.cpp  JungleTexture.h  NoTexture.cpp  NoTexture.h  SandTexture.cpp  SandTexture.h  SimpleMountainOpener.h  SimpleMountainTexture.cpp  SimpleMountainTexture.h  SnowTexture.cpp  SnowTexture.h
source/Utils/: Color.h  SolutionImpl.h
